--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,18 +49,46 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+
+
+    implementation 'androidx.arch.core:core-testing:2.1.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
+
+  /*  testImplementation 'junit:junit:4.13.2'
+    testImplementation 'androidx.test:core:1.4.0'
+    testImplementation 'androidx.test.ext:truth:1.4.0'
+    testImplementation 'com.google.truth:truth:1.0'
+    testImplementation 'org.mockito:mockito-core:3.3.3'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.test.espresso:espresso-intents:3.4.0"
+    androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:3.4.0"
+    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.3'
+    androidTestImplementation 'org.mockito:mockito-android:2.24.5'
+*/
+
+
+    // Espresso
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+    androidTestImplementation "androidx.test.espresso:espresso-accessibility:3.3.0"
+
+    implementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.test:core:1.4.0"
 
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Mockk.io
+    androidTestImplementation "io.mockk:mockk-android:1.9.3"
+    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     testImplementation 'org.mockito:mockito-core:3.3.3'
-    androidTestImplementation 'org.mockito:mockito-android:2.24.5'
-    implementation 'androidx.arch.core:core-testing:2.1.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2'
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
+
 
     // Networking
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
@@ -79,6 +107,5 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
-    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
 
 }
